fixed the nav gap

--- a/css/ppp.css
+++ b/css/ppp.css
@@ -57,7 +57,7 @@ header {
 header::before {
    content: "";
    position: absolute;
-   top: -250px;
+   top: -334px;
    left: 0;
    background-image: linear-gradient(
       to right top,
@@ -75,7 +75,7 @@ header::before {
       #888888
    );
    width: 100%;
-   height: 700px;
+   height: 800px;
    z-index: -1;
    transform: skewY(-20deg);
    box-shadow: 0 1px 8px #000;
